# FootballForecast

./: .dockerignore  .env  .env.example  .env.production  .env.production.supabase  .eslintrc.json  .gitignore  .htmlvalidate.json  .replit  404_ERROR_RESOLUTION.md  ALL_FIXES_COMPLETE.md  ALL_ISSUES_RESOLVED.md  API_FIXES_SUMMARY.md  API_INTEGRATION_FIXES.md  API_PLAN_COMPATIBILITY_FIX.md  BACKEND_DEPLOYMENT_STATUS.md  BETTING_INSIGHTS_ENHANCEMENT_COMPLETE.md  BETTING_INSIGHTS_IMPLEMENTATION.md  BETTING_INSIGHTS_QUICK_START.md  BLANK_SCREEN_ANALYSIS.md  BROWSER_EXTENSION_ERROR_SOLUTION.md  BUILD_AND_RUN.md  BUILD_FIX_SUMMARY.md  COMPLETE_DEPLOYMENT_SUMMARY.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPLETE_STATUS_2025-10-04.md  COMPLETE_SYSTEM_UPDATE_2025-01-24.md  COMPONENT_DOCS.md  CRITICAL_500_ERROR_FIX.md  CRITICAL_API_FIX_REQUIRED.md  CRITICAL_BUILD_FIX.md  CRITICAL_FCP_FIX_COMPLETE.md  CRITICAL_FIXES_2025-10-06.md  CRITICAL_FIXES_2025-10-07.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_REPORT.md  CRITICAL_RECHARTS_FIX_2025-10-07.md  CSP_SOLUTION.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DEPLOYMENT.md  (+176 more)
.github/: README.md
attached_assets/: Pasted--Goal-Complete-Phase-C-ML-Real-Time-Integration-and-finalize-SabiScore-into-a-producti-1758609644258_1758609644266.txt  Pasted--Replit-Task-Prompt-Phase-C-Final-Experience-Delivery-Goal-Complete-Phase-C--1758594717607_1758594717608.txt  Pasted--SabiScore-Transformation-Roadmap-Mission-Transform-SabiScore-into-a-productio-1758585089699_1758585089700.txt  (+3 more)
client/: index.html  package.json  vitest.config.ts
docs/: QUICK_REFERENCE.md  (+7 more)
(+170 files in other folders)
