[project]
name = "football-forecast-ml"
version = "0.1.0"
description = "Football Forecast ML microservice"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "fake-useragent>=2.2.0",
    "fastapi>=0.117.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "tenacity>=9.1.2",
    "uvicorn>=0.36.0",
    "xgboost>=3.0.5",
]